--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,14 +5,14 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-solciv = "3qoyRXbpBJDPfQYL5GUFJ2nf2YzpA8kZmXPYr4DZBmPU"
+solciv = "36bGmrBLBohKsXuo9e7yQGj9n34qFznxTH1Sq5WpSjhE"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "~/.config/solana/id.json"
+wallet = "/home/vitor/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
